--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,42 @@
-ncatbot
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+anyio==4.9.0
+appdirs==1.4.4
+attrs==25.3.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+colorama==0.4.6
+Deprecated==1.2.18
+frozenlist==1.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+importlib_metadata==8.7.0
+Markdown==3.8
+multidict==6.4.4
+ncatbot==3.8.2
+packaging==25.0
+peewee==3.18.1
+pillow==11.2.1
+propcache==0.3.1
+psutil==7.0.0
+pyee==11.1.1
+Pygments==2.19.1
+pyppeteer==2.0.0
+PyYAML==6.0.2
+qrcode==8.2
+requests==2.32.3
+schedule==1.2.2
+smmap==5.0.2
+sniffio==1.3.1
+tqdm==4.67.1
+typing_extensions==4.13.2
+urllib3==1.26.20
+websockets==10.4
+wrapt==1.17.2
+yarl==1.20.0
+zipp==3.21.0
