--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.11.18
 aiosignal==1.3.2
 anyio==4.9.0
 appdirs==1.4.4
+APScheduler==3.11.0
 attrs==25.3.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
@@ -35,6 +36,8 @@ smmap==5.0.2
 sniffio==1.3.1
 tqdm==4.67.1
 typing_extensions==4.13.2
+tzdata==2025.2
+tzlocal==5.3.1
 urllib3==1.26.20
 websockets==10.4
 wrapt==1.17.2
