feat: 修改atall在config中的位置

--- a/config.yaml
+++ b/config.yaml
@@ -46,13 +46,12 @@ devgroup: 123456 # 開發羣組
 function_open:
   command: False
   report:
-    ated: False # 是否需要上报at all在下面
+    ated: False
+    at_all: False
     private_msg: False
     poke: False
     red_pocket: False
     replied: False
-
-report_at_all: False
 
 promotegroup:
     - 111111
